--- a/Tema 02 - Web Services/readme
+++ b/Tema 02 - Web Services/readme
@@ -1,1 +1,2 @@
- 
+proiectul a fost facut direct peste proiectul exemplu
+veti gasi in proiect si codul initial nemodificat (exceptie start.cs unde am adaugat eu)
